First start on showing notifications for calls.